# ekf-vio

./: .clang-format  .clang-tidy  .gitignore  .lcovrc  .license-header.txt  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  codecov.yml  package.xml
.github/workflows/: ci.yml  deploy-pages.yml  regression.yml
app/: euroc_main.cpp  euroc_rerun_main.cpp  euroc_vo_main.cpp  vio_node.cpp
config/: euroc.yaml
docs/: ekf_vio_math.md  index.html  snapchat_interview_presentation.html  snapchat_interview_presentation.md
include/ekf_vio/: config.hpp  ekf.hpp  ekf_rk4.hpp  euroc_reader.hpp  logging.hpp  math_utils.hpp  stereo_rectifier.hpp  stereo_tracker.hpp  stereo_vo.hpp  types.hpp
launch/: vio.launch.py
scripts/: check_regression.py  compare_vo_vio.py  download_testdata.sh  evaluate_euroc.py  run_viz_docker.sh  vio_observer.py
src/: ekf.cpp  ekf_rk4.cpp  euroc_reader.cpp  stereo_rectifier.cpp  stereo_tracker.cpp  stereo_vo.cpp
test/: ekf_test.cpp  stereo_tracker_test.cpp  stereo_vo_test.cpp  test_ekf.cpp  test_math_utils.cpp
test/regression/: baselines.json
